--- a/css/style.css
+++ b/css/style.css
@@ -2093,3 +2093,14 @@ body:not(.dark-theme) label {
     transform: translateY(-50%) scale(0.9);
 }
 
+/* Floating Outlined Labels Configuration */
+.floating-group {
+    position: relative;
+}
+
+/* Hide floating labels on desktop */
+.floating-group label {
+    display: none;
+}
+
+
